--- a/package.json
+++ b/package.json
@@ -14,15 +14,19 @@
     "canvas-confetti": "^1.9.4",
     "clsx": "^2.1.1",
     "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
     "express": "^4.21.0",
     "framer-motion": "^12.23.26",
     "lucide-react": "^0.561.0",
+    "pg": "^8.17.2",
     "react": "^19.2.0",
     "react-confetti": "^6.4.0",
     "react-dom": "^19.2.0",
+    "recharts": "^3.7.0",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
     "tailwind-merge": "^3.4.0",
+    "web-push": "^3.6.7",
     "zustand": "^5.0.9"
   },
   "devDependencies": {
